# cellular-automaton

./: Cargo.toml  README.md
src/: main.rs
src/automaton/: mod.rs
