[lib]

[package]
name = "elementary-cellular-automaton"
version = "0.2.0"
edition = "2021"

license = "MIT"
description = "Library that handles Elementary Cellular Automata"
repository = "https://github.com/wleklinskimateusz/cellular-automaton" # Link to the source repository (if available)
readme = "README.md"

[dependencies]
